@startuml

title __SERVICE's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService {
        {static} - BEACON_MAX_SONG_ID : int
        {static} - BEACON_MIN_SONG_ID : int
        {static} - BEACON_PORT : int
        {static} - WITNESS_PERIOD : int
        - songId : int
        + SoundAdaptationService()
        # beaconReset()
        # beaconStart()
        # beaconStop()
        # fragmentStart()
        # fragmentStop()
        # serviceGenerateQuirkyProperties()
        # serviceReset()
        - witnessReset()
        - witnessStart()
        - witnessStop()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService.Listener {
        + onComplete()
        + onError()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationServiceApp {
        {static} + main()
    }
  }
  

  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService -up-|> pt.ulisboa.tecnico.surespace.ds2os.service.AdaptationService
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.arduino.device.SoundBeacon : beacon
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.audio.AudioProcessing : witness
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessAmplitudeSamplingRateValue
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessAmplitudeValue
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessIsOn
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService +-down- pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService.Listener
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService.Listener .up.|> pt.ulisboa.tecnico.surespace.common.async.AsyncListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
